--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Editor
+*.swp
+Session.vim
+.vimrc
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -102,3 +107,5 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+tags
+cfg/
