--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,8 @@
 language: python
+python:
+    - "2.7"
+install:
+    - python setup.py install
+script:
+    - pytest
+    - pylint job setup.py jobrunner
