--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: python
 python:
     - "2.7"
+install:
+    - pip install -r requirements.txt
+    - pip install .
 script:
     - pytest
     - pylint job setup.py jobrunner
