--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,15 +14,14 @@ jobs:
                 architecture: 'x64'
   
           - script:
-              - python -m pip install --upgrade pip
-              - pip install -r requirements.txt
+              pip install --upgrade pip && pip install -r requirements.txt
             displayName: 'Install dependencies'
   
-          - script :
-              - pylint job setup.py jobrunner
-              - autopep8 -j32 -ra job setup.py jobrunner
-            displayName: 'Run linters'
+          - script: pylint job setup.py jobrunner
+            displayName: 'Run pylint'
+
+          - script: autopep8 --exit-code -j32 -ra job setup.py jobrunner
+            displayName: 'Run autopep8'
   
-          - script :
-              - pytest
+          - script: pytest
             displayName: 'Run tests'
