--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,6 +22,9 @@ jobs:
 
           - script: autopep8 --exit-code -ra --diff job setup.py jobrunner
             displayName: 'Run autopep8'
+
+          - script: python setup.py install
+            displayName: 'Install jobrunner'
   
           - script: pytest
             displayName: 'Run tests'
