ci: clean up remenants of travis-CI
Also updated testenv to be less invasive.

--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ envlist = py27
 [testenv]
 platform = linux2|darwin
 deps = -r requirements.txt
-commands = {envbindir}/pylint job setup.py jobrunner
+commands =
+    {envbindir}/pylint job setup.py jobrunner
     {envbindir}/autopep8 --exit-code -ra --diff job setup.py jobrunner
     {envbindir}/pytest
