job: Refactor main script into more functions
There is more work to come, but it's a start.

--- a/tox.ini
+++ b/tox.ini
@@ -14,4 +14,4 @@ commands =
     {envbindir}/isort -c --diff -rc {[defs]filespec}
     {envbindir}/autopep8 --exit-code -ra --diff {[defs]filespec}
     {envbindir}/pylint -d fixme {[defs]filespec}
-    {envbindir}/pytest -v
+    {envbindir}/pytest -v -l
