tox: add -v argument to tox invocation

--- a/tox.ini
+++ b/tox.ini
@@ -7,4 +7,4 @@ deps = -r requirements.txt
 commands =
     {envbindir}/pylint job setup.py jobrunner
     {envbindir}/autopep8 --exit-code -ra --diff job setup.py jobrunner
-    {envbindir}/pytest
+    {envbindir}/pytest -v
