tox: check isort as well, disable pylint fixme

--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,17 @@
 [tox]
 envlist = py27
 
+[defs]
+filespec =
+    job
+    setup.py
+    jobrunner
+
 [testenv]
 platform = linux2|darwin
 deps = -r requirements.txt
 commands =
-    {envbindir}/pylint job setup.py jobrunner
-    {envbindir}/autopep8 --exit-code -ra --diff job setup.py jobrunner
+    {envbindir}/isort -c --diff -rc {[defs]filespec}
+    {envbindir}/autopep8 --exit-code -ra --diff {[defs]filespec}
+    {envbindir}/pylint -d fixme {[defs]filespec}
     {envbindir}/pytest -v
