Generate requirements using pip-compile
This helps with getting transitive dependency versions correct.

Ref: https://medium.com/knerd/the-nine-circles-of-python-dependency-hell-481d53e3e025

--- a/tox.ini
+++ b/tox.ini
@@ -15,3 +15,9 @@ commands =
     {envbindir}/autopep8 --exit-code -ra --diff {[defs]filespec}
     {envbindir}/pylint -d fixme {[defs]filespec}
     {envbindir}/pytest -v -l
+
+[testenv:pip-compile]
+deps = pip-tools
+
+commands=
+    pip-compile requirements.in requirements.testing.in -o requirements.txt
