--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ commands =
     {envbindir}/isort -c --diff -rc {[defs]filespec}
     {envbindir}/autopep8 --exit-code -ra --diff {[defs]filespec}
     {envbindir}/pylint -d fixme {[defs]filespec}
-    {envbindir}/pytest -v -l
+    {envbindir}/pytest -v -l --junitxml=junit/test-results.xml
 
 [testenv:pip-compile]
 deps = pip-tools
