azure: try to display better information for tests

--- a/templates/steps.yaml
+++ b/templates/steps.yaml
@@ -11,4 +11,4 @@ steps:
   condition: succeededOrFailed()
   inputs:
       testResultsFiles: '**/test-*.xml'
-      testRunTitle: 'Publish test results for Python $(python.version)'
+      testRunTitle: 'Publish test results for $(job)'
