--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,9 @@ more-itertools==5.0.0     # via pytest
 nose==1.3.7
 packaging==19.1           # via pytest, tox
 pathlib2==2.3.4           # via importlib-metadata, pytest
+pexpect==4.8.0
 pluggy==0.12.0            # via pytest, tox
+ptyprocess==0.6.0         # via pexpect
 py==1.8.0                 # via pytest, tox
 pycodestyle==2.5.0        # via autopep8
 pylint==1.9.5
