--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ atomicwrites==1.3.0       # via pytest
 attrs==19.1.0             # via packaging, pytest
 autopep8==1.4.4
 backports.functools-lru-cache==1.5  # via astroid, isort, pylint
+certifi==2020.4.5.1       # via requests
+chardet==3.0.4            # via requests
 configparser==3.8.1       # via importlib-metadata, pylint
 contextlib2==0.5.5        # via importlib-metadata
 dateutils==0.6.6
@@ -17,6 +19,7 @@ enum34==1.1.6             # via astroid
 filelock==3.0.12          # via tox
 funcsigs==1.0.2           # via mock, pytest
 futures==3.3.0            # via isort
+idna==2.9                 # via requests
 importlib-metadata==0.19  # via pluggy, pytest, tox
 isort==4.3.21
 lazy-object-proxy==1.4.2  # via astroid
@@ -36,12 +39,14 @@ pyparsing==2.4.2          # via packaging
 pytest==4.6.5
 python-dateutil==2.8.0    # via dateutils
 pytz==2019.2              # via dateutils
+requests==2.23.0          # via -r requirements.in
 scandir==1.10.0           # via pathlib2
 simplejson==3.3.0
 singledispatch==3.4.0.3   # via astroid, pylint
 six==1.12.0               # via astroid, mock, more-itertools, packaging, pathlib2, pylint, pytest, python-dateutil, singledispatch, tox
 toml==0.10.0              # via tox
 tox==3.13.2
+urllib3==1.25.9           # via requests
 virtualenv==16.7.3        # via tox
 wcwidth==0.1.7            # via pytest
 wrapt==1.11.2             # via astroid
