--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ platform = linux2|darwin
 deps = -r requirements.txt
 commands =
     {envbindir}/isort -c --diff -rc {[defs]filespec}
-    {envbindir}/autopep8 --exit-code -ra --diff {[defs]filespec}
+    {envbindir}/autopep8 --indent-size=4 --exit-code -ra --diff {[defs]filespec}
     {envbindir}/pylint -d fixme {[defs]filespec}
     {envbindir}/pytest -v -l --junitxml=junit/test-results.xml --durations=10
 
