--- a/azure-pipelines-native.yaml
+++ b/azure-pipelines-native.yaml
@@ -11,8 +11,8 @@ jobs:
       matrix:
         Python27:
           python.version: '2.7'
-        # Python37:
-        #   python.version: '3.7'
+        Python37:
+          python.version: '3.7'
     steps:
       - template: ci/steps.yaml
 
