--- a/ci/steps.yaml
+++ b/ci/steps.yaml
@@ -9,7 +9,9 @@ steps:
 - script: python -m pip install --upgrade pip setuptools wheel pipenv
   displayName: 'Install tools'
 
-- script: pipenv --python '$(python.version)' install --dev
+- script: |
+    pipenv --python '$(python.version)' install --dev
+    pipenv graph
   displayName: 'Install from Pipfile'
 
 - script: |
