--- a/ci/azure/azure-pipelines.yaml
+++ b/ci/azure/azure-pipelines.yaml
@@ -11,8 +11,8 @@ jobs:
       matrix:
         Python27:
           python.version: '2.7'
-        # Python37:
-        #   python.version: '3.7'
+        Python37:
+          python.version: '3.7'
     steps:
       - template: steps.yaml
 
@@ -23,7 +23,7 @@ jobs:
       matrix:
         Python27:
           python.version: '2.7'
-        # Python37:
-        #   python.version: '3.7'
+        Python37:
+          python.version: '3.7'
     steps:
       - template: steps.yaml
