setup: use entrypoint to jobrunner.main:main
Moved `job` to jobrunner/main.py so that all the python files are under jobrunner and
have a .py extension.

Used setuptools entrypoint for the `job` script.

--- a/ci/azure/steps.yaml
+++ b/ci/azure/steps.yaml
@@ -14,7 +14,7 @@ steps:
 
 - script: |
     set -xe
-    FILES=(job setup.py jobrunner)
+    FILES=(setup.py jobrunner)
     pipenv run isort -c --diff -rc "${FILES[@]}"
     pipenv run autopep8 --exit-code -ra --diff "${FILES[@]}"
     pipenv run pylint -d fixme "${FILES[@]}"
