ci: update isort to version 5
requires updates to format.sh and ci scripts.

--- a/ci/azure/steps.yaml
+++ b/ci/azure/steps.yaml
@@ -15,7 +15,7 @@ steps:
 - script: |
     set -xe
     FILES=(setup.py jobrunner)
-    pipenv run isort -c --diff -rc "${FILES[@]}"
+    pipenv run isort -c --diff "${FILES[@]}"
     pipenv run autopep8 --exit-code -ra --diff "${FILES[@]}"
     pipenv run pylint -d fixme "${FILES[@]}"
   displayName: Run linters
