test: use chardet to implement `autoDecode`
This will make it easier to deal with byte array outputs and removes the need for
assuming a specific encoding.

Updated the integration tests to use autoDecode as well.

--- a/Pipfile
+++ b/Pipfile
@@ -12,11 +12,12 @@ pylint = "*"
 pytest = "*"
 
 [packages]
-six = "*"
+chardet = "*"
 dateutils = "*"
 importlib-metadata = "*"
 requests = "<2.26.0"
 simplejson = "<3.18.0"
+six = "*"
 
 [requires]
 python_version = "3.7"
