doc: convert README from md to rst
Used https://cloudconvert.com/md-to-rst with some modifications.

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,8 @@
 name = shell-jobrunner
 version = 2.3.1
 description = Shell-based job runner with logging
-long_description = file:README.md
+long_description = file:README.rst
+long_description_content_type = text/x-rst
 url = https://github.com/wwade/jobrunner
 project_urls =
     Source = https://github.com/wwade/jobrunner
