--- a/setup.cfg
+++ b/setup.cfg
@@ -28,7 +28,7 @@ python_requires = >= 2.7
 install_requires=
     chardet
     dateutils
-    importlib-metadata
+    importlib-metadata; python_version < "3.8"
     requests < 2.26.0
     simplejson < 3.18.0
     six
