package: remove arbitrary restrictions on requests, simplejson
They were using max version numbers in setup.cfg and it wasn't really necessary.

--- a/Pipfile
+++ b/Pipfile
@@ -15,8 +15,8 @@ pytest = "*"
 chardet = "*"
 dateutils = "*"
 importlib-metadata = "*"
-requests = "<2.26.0"
-simplejson = "<3.18.0"
+requests = "*"
+simplejson = "*"
 six = "*"
 
 [requires]
