--- a/setup.cfg
+++ b/setup.cfg
@@ -29,8 +29,8 @@ install_requires=
     chardet
     dateutils
     importlib-metadata; python_version < "3.8"
-    requests < 2.26.0
-    simplejson < 3.18.0
+    requests
+    simplejson
     six
 packages = find:
 
