ci: include flake8 in CI jobs
Some IDEs like to use it by default, so add a compatible configuration.

--- a/ci/azure/steps.yaml
+++ b/ci/azure/steps.yaml
@@ -24,6 +24,7 @@ steps:
     pipenv run isort -c --diff "${FILES[@]}"
     pipenv run autopep8 --exit-code -ra --diff "${FILES[@]}"
     pipenv run pylint -d fixme "${FILES[@]}"
+    find jobrunner -type f -name "*.py" -not -name "compat.py" | xargs pipenv run flake8 setup.py
   displayName: Run linters
 
 - script: pipenv run pip install .
