--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,5 @@
 [metadata]
 name = shell-jobrunner
-version = 2.3.1
 description = Shell-based job runner with logging
 long_description = file:README.rst
 long_description_content_type = text/x-rst
@@ -19,12 +18,16 @@ classifiers =
     Programming Language :: Python
     Programming Language :: Python :: 2.7
     Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
     Topic :: Utilities
     Topic :: Terminals
     Topic :: System :: Shells
 
 [options]
 python_requires = >= 2.7
+setup_requires = setuptools_scm
 install_requires=
     chardet
     dateutils
