--- a/ci/azure/azure-pipelines.yaml
+++ b/ci/azure/azure-pipelines.yaml
@@ -27,5 +27,7 @@ jobs:
       matrix:
         Python37:
           python.version: '3.7'
+        Python39:
+          python.version: '3.9'
     steps:
       - template: steps.yaml
