--- a/ci/azure/azure-pipelines.yaml
+++ b/ci/azure/azure-pipelines.yaml
@@ -9,14 +9,15 @@ jobs:
       vmImage: ubuntu-20.04
     strategy:
       matrix:
-        Python27:
-          python.version: '2.7'
         Python37:
           python.version: '3.7'
         Python38:
           python.version: '3.8'
         Python39:
           python.version: '3.9'
+        # Not yet supported on azure
+        # Python310:
+        #   python.version: '3.10'
     steps:
       - template: steps.yaml
 
@@ -25,8 +26,6 @@ jobs:
       vmImage: 'macOS-10.15'
     strategy:
       matrix:
-        Python37:
-          python.version: '3.7'
         Python39:
           python.version: '3.9'
     steps:
