project: prepare for PyPI and use setuptools-scm
This gives automatic version numbers from git release tags.

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ isort = "*"
 modernize = "*"
 pylint = "*"
 pytest = "*"
+setuptools-scm = "*"
 mypy = "*"
 jobrunner-git = {editable = true, path = "."}
 
