test: mark RunExecOptionsTest.testWatchWait as flaky
It will frequently hit a pexpect TIMEOUT in CI builds waiting for the notifier
output, so let's just retry in that case.

Makes use of https://pypi.org/project/pytest-retry/.

Using the flaky mark causes only that test case to be retried.

--- a/Pipfile
+++ b/Pipfile
@@ -9,8 +9,9 @@ flake8 = "*"
 isort = "*"
 mock = "*"
 pexpect = "*"
-pytest = "*"
+pytest = "~=7.0"
 pylint = "*"
+pytest-retry = "*"
 
 [packages]
 chardet = "*"
