--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,12 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "config:recommended", "group:all"
+    "config:recommended"
+  ],
+  "packageRules": [
+    {
+      "matchConfidence": ["high", "very high"],
+      "groupName": "all high confidence dependencies"
+    }
   ]
 }
